# zed

./: Cargo.toml  README.md  rust-toolchain.toml
crates/gpui_web_example/: CLAUDE.md  Cargo.toml  build-examples.sh  index.html
crates/gpui_web_example/src/: lib.rs
crates/gpui_web_example/www/: example.html  examples.html  index.html
crates/gpui_web_example/www/assets/image/: image.rs
crates/gpui_web_example/www/assets/svg/: svg.rs
crates/gpui_web_example/www/pkg/: gpui_web_example.d.ts  gpui_web_example.js  gpui_web_example_bg.wasm.d.ts  package.json
crates/gpui_web_example/www/pkg/examples/animation/: animation.d.ts  animation.js  animation_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/data_table/: data_table.d.ts  data_table.js  data_table_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/drag_drop/: drag_drop.d.ts  drag_drop.js  drag_drop_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/focus_visible/: focus_visible.d.ts  focus_visible.js  focus_visible_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/gif_viewer/: gif_viewer.d.ts  gif_viewer.js  gif_viewer_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/gradient/: gradient.d.ts  gradient.js  gradient_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/grid_layout/: grid_layout.d.ts  grid_layout.js  grid_layout_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/hello_world/: hello_world.d.ts  hello_world.js
crates/gpui_web_example/www/pkg/examples/image/: image.d.ts  image.js  image_bg.wasm.d.ts
crates/gpui_web_example/www/pkg/examples/image_gallery/: image_gallery.d.ts  image_gallery.js  image_gallery_bg.wasm.d.ts
crates/http_client/: Cargo.toml
crates/http_client/src/: http_client.rs  web.rs
(+141 files in other folders)
