[package]
name = "gpui_web_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gpui = { path = "../gpui", default-features = false, features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Response"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
futures = "0.3"
lyon = { version = "1.0", features = ["extra"] }
