[package]
name = "http_client"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "A HTTP client library for Zed and GPUI"

[lints]
workspace = true

[features]
test-support = []

[lib]
path = "src/http_client.rs"
doctest = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
http.workspace = true
log.workspace = true

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compression.workspace = true
async-fs.workspace = true
async-tar.workspace = true
bytes.workspace = true
derive_more.workspace = true
http-body.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
sha2.workspace = true
tempfile.workspace = true
url.workspace = true
util.workspace = true

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Headers",
    "Response",
] }
